深入解析synchronized文章